--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>myClass Landing Page</title>
+		<title>meuPrato</title>
 		<link rel="stylesheet" type="text/css" href="./css/main.css">
 		<script src="./js/fontawesome-all.js"></script>
 	</head>
@@ -11,7 +11,7 @@
 		<div class="wrapper">
 			<nav class="navegacao">
 				<div class="logo">
-					<a class="logo-navegacao" href="#">myClass</a>
+					<a class="logo-navegacao" href="#">meuPrato</a>
 				</div>
 				<a href="#" class="toggle-button">
 					<span class="bar"></span>
@@ -42,7 +42,7 @@
 				</div>
 			</nav>
 			<main class="destaque">
-				Destaque
+				
 			</main>
 			<section class="conteudo">
 				<div class="secao-produto">
