--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
 							<a href="#rodape">Fale conosco</a>
 						</li>
 					</ul>
+					<ul class="lista-delivery">
+						<li>
+							<a href=""><i class="fas fa-phone-square"></i></a>
+						</li>
+					</ul>
 				</div>
 			</nav>
 			<main class="destaque">
