--- a/index.html
+++ b/index.html
@@ -5,13 +5,22 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>meuPrato</title>
 		<link rel="stylesheet" type="text/css" href="./css/main.css">
+
+		<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
+
+		<!----------- AOS ------------->
+		<link rel="stylesheet" type="text/css" href="./css/aos.css">
+
+		<!---------- Fontawesomme ----->
 		<script src="./js/fontawesome-all.js"></script>
+
 	</head>
 	<body>
 		<div class="wrapper">
 			<nav class="navegacao">
 				<div class="logo">
-					<a class="logo-navegacao" href="#">meuPrato</a>
+					<a class="logo-navegacao" href="#"><i class="fab fa-envira"></i></a>
+					<a href="" class="texto-navegacao">myRestaurant</a>
 				</div>
 				<a href="#" class="toggle-button">
 					<span class="bar"></span>
@@ -24,13 +33,10 @@
 							<a href="index.html">Home</a>
 						</li>
 						<li>
-							<a href="#sobre">Metodologia</a>
+							<a href="#sobre">Nossos Loja</a>
 						</li>
 						<li>
-							<a class="active" href="#vantagens">Para Você</a>
-						</li>
-						<li>
-							<a href="#prod">Produtos</a>
+							<a class="active" href="#vantagens">Menu</a>
 						</li>
 						<li>
 							<a href="#documentacao">Informações Úteis</a>
@@ -41,17 +47,30 @@
 					</ul>
 					<ul class="lista-delivery">
 						<li>
-							<a href=""><i class="fas fa-phone-square"></i></a>
+							<a href=""><i class="facebook fab fa-facebook-square fa-2x "></i></a>
+						</li>
+						<li>
+							<a href=""><i class="instagram fab fa-instagram fa-2x "></i></a>
+						</li>
+						<li>
+							<a href="" class="num-phone"><i class="whatsapp fab fa-whatsapp fa-2x"></i>&nbsp;&nbsp;(21) 99999-9999</a>
 						</li>
 					</ul>
 				</div>
 			</nav>
 			<main class="destaque">
-				
+				<h1 class="destaque-titulo">Experimente opções das melhores culinárias do planeta.</h1>
+				<button class="destaque-botao">Faça já o seu pedido!</button>
 			</main>
 			<section class="conteudo">
 				<div class="secao-produto">
-					Produto
+					<div data-aos="fade-right" data-aos-delay="400" class="produtos-texto">
+						<h2 class="produtos-texto-titulo">Bem-vindo ao <strong class="cor-principal">myRestaurant</strong></h2>
+						<p class="produtos-texto-paragrafo">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut rutrum, lectus eu varius vulputate, elit sapien porttitor eros, eget tempor ligula enim et quam. Aliquam purus felis, scelerisque id quam sit amet, interdum accumsan mauris. Quisque vel dui eros. In nisi ex, euismod vitae facilisis et, sagittis vel orci. Integer pharetra ligula tellus, id imperdiet sem mattis in. Vivamus at ipsum sed sapien dictum consequat. Morbi quis auctor nulla. Maecenas laoreet laoreet hendrerit. Ut sed orci nec erat laoreet dapibus. Suspendisse egestas lacinia mauris commodo hendrerit. Duis sed ornare felis. Cras nec libero urna. Nam condimentum in lectus ut fermentum. Sed et luctus erat. Phasellus id augue justo. Phasellus vel consequat nibh, non suscipit velit.</p>
+					</div>
+					<div data-aos="fade-up" data-aos-delay="200" class="produtos-imagem">
+						<img src="./img/entrada.jpg" class="img-thumbnail">
+					</div>
 				</div>
 				<div class="secao-validacao">
 					Validacao
@@ -61,5 +80,26 @@
 				Cabecalho
 			</footer>
 		</div>
+
+		<!------------ Bootstrap -------------------------------------------------------->
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+
+		<!----------- Jquery ------------------------------------------------------------>
+		<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+
+		<!------------ Popper ----------------------------------------------------------->
+		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+
+		 <!-- --------- Owl-Carousel js ------------------->
+    	<script src="./js/owl.carousel.min.js"></script>
+
+    	<!-- aos ---------------------->
+		<script src="./js/aos.js"></script>
+
+		 <!-- Custom Javascript file -->
+   		 <script src="./js/main.js"></script>
+	
+		<script src="./js/index.js" async></script>
+
 	</body>
 </html>
